# agentic-layer-python

./: .env.sample  .gitignore  README.md  pyproject.toml  pyrightconfig.json  whitelist.py
.claude/: settings-fake.json  settings-olds.json  settings.final.json  settings.json  statusline.sh
.claude/agents/: meta-agent.md
.claude/commands/: prime_claude_code.md
.claude/commands/experts/cc_hook_expert/: cc_hook_expert_build.md  cc_hook_expert_plan.md
.claude/hooks/: pre_tool_use.py  stop.py  user_prompt_submit.py
.claude/hooks/logging/: context_bundle_builder.py  universal_hook_logger.py
.claude/hooks/logging/utils/: __init__.py  data_types.py  utils.py
.claude/hooks/notification/: notification_logger.py
.claude/hooks/notification/utils/: __init__.py  data_types.py
.claude/hooks/post_tools/: README.md  basedpyright_checking.py  block_sys_path_manipulation.py  code_similarity_check.py  error_handling_reminder.py  file_version_prevention.py  post_tools_logging.py  ruff_checking.py  unified_python_antipattern_hook.py  vulture_checking.py
.claude/hooks/pre_tools/: README.md  __init__.py  code_similarity_checking.py  coding_naming_enforcer.py  destructive_command_blocker.py  file_naming_enforcer.py  lint_arg_pytest.py  lint_argument_enforcer.py  pep8_naming_enforcer.py  pre_tools_logging.py  sensitive_file_access_validator.py  tmp_creation_blocker.py  uv_dependency_blocker.py  uv_workflow_enforcer.py
.claude/hooks/utils/: __init__.py  data_types.py
.claude/output-styles/: context-aware.md
.claude/tdd-guard/data/: config.json  instructions.md
ai_docs/: README.md  agent-sdk-python.md  agent-sdk-typescript.md  claude-built-in-tools.md  claude-code-headless.md  claude-code-mcp.md  claude-code-plugins.md  claude-code-skills.md  claude-code-slash-commands.md  hooks.md  models-overview.md  output-styles.md  plugins-reference.md  sub-agents.md  uv-running-scripts.md  uv-working-on-projects.md
specs/experts/cc_hook_expert/: destructive-command-blocker-spec.md  logging-and-code-quality-refactor-spec.md  pep8-naming-enforcer-spec.md  pre-tools-shared-utilities-refactoring.md  tmp-creation-blocker-spec.md  toolinput-type-refactoring-spec.md  uv-dependency-blocker-spec.md  uv-workflow-enforcer-spec.md
tests/: __init__.py  conftest.py
tests/claude_hook/: __init__.py
tests/claude_hook/hook_utils/: __init__.py  test_data_types.py  test_init.py
tests/claude_hook/logging/: test_context_bundle_builder.py  test_universal_hook_logger.py
tests/claude_hook/post_tools/: test_basedpyright_checking.py  test_error_handling_reminder.py  test_ruff_checking.py  test_unified_python_antipattern.py  test_vulture_checking.py
tests/claude_hook/pre_tools/: test_code_similarity_checking.py  test_destructive_command_blocker.py  test_file_naming_enforcer.py  test_lint_arg_pytest.py  test_pep8_naming_enforcer.py  test_sensitive_file_access_validator.py  test_tmp_creation_blocker.py  test_uv_dependency_blocker.py  test_uv_workflow_enforcer.py
(+65 files in other folders)
