[project]
name = "claude-setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.68.0",
    "basedpyright>=1.31.5",
    "dotenv>=0.9.9",
    "elevenlabs>=2.16.0",
    "misaki[ja,zh]>=0.9.4",
    "mlx-audio>=0.2.5",
    "openai>=1.109.1",
    "pip>=25.2",
    "pyttsx3>=2.99",
    "ruff>=0.13.2",
    "tdd-guard-pytest>=0.1.2",
    "vulture>=2.14",
    "en_core_web_sm"
]

[tool.uv.sources]
"en_core_web_sm" = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.vulture]
min_confidence = 80
ignore_decorators = ["@app.route", "@pytest.fixture", "@click.command"]
ignore_names = ["test_*", "Test*", "setUp", "tearDown"]
exclude = ["*/migrations/*", "*/tests/*"]
sort_by_size = true
verbose = false

[tool.pytest.ini_options]
tdd_guard_project_root = "/Users/ringo/Desktop/claude-setup-python"
