[project]
name = "claude-setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.68.0",
    "basedpyright>=1.31.5",
    "dotenv>=0.9.9",
    "elevenlabs>=2.16.0",
    "misaki[ja,zh]>=0.9.4",
    "mlx-audio>=0.2.5",
    "openai>=1.109.1",
    "pip>=25.2",
    "pyttsx3>=2.99",
    "ruff>=0.13.2",
    "tdd-guard-pytest>=0.1.2",
    "vulture>=2.14",
    "en_core_web_sm",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
]

[tool.uv.sources]
"en_core_web_sm" = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[tool.vulture]
min_confidence = 80
ignore_decorators = ["@app.route", "@pytest.fixture", "@click.command"]
ignore_names = ["test_*", "Test*", "setUp", "tearDown"]
exclude = ["*/migrations/*", "*/tests/*"]
sort_by_size = true
verbose = false

[tool.pytest.ini_options]
tdd_guard_project_root = "/Users/ringo/Desktop/claude-setup-python"
